# Data-Lineage-Explorer

./: .gitignore  CLAUDE.md  Dockerfile
.claude/: CLAUDE.md  settings.local.json
backend/: main.py  pyproject.toml  state.py
backend/api/: models.py  routes.py
backend/ingestion/: databricks.py  git.py  upload.py
backend/lineage/: engine.py  ids.py  models.py
backend/parsers/: notebook.py  pyspark.py  sql.py  sql_script.py
backend/tests/: test_engine.py  test_ids.py  test_ingestion_upload.py  test_models.py  test_notebook_parser.py  test_pyspark_parser.py  test_routes.py  test_sql_parser.py  test_sql_script_normalize.py
docs/: ARCHITECTURE.md
docs/brainstorms/: 2026-04-24-supabase-integration-requirements.md  2026-04-24-transform-tab-requirements.md  2026-04-25-codebase-ask-feature-requirements.md  2026-04-25-databricks-sql-parser-improvements-requirements.md  2026-04-28-passthrough-sql-context-requirements.md  2026-04-28-transform-tab-accuracy-requirements.md  2026-04-29-transform-tab-multi-source-expression-requirements.md  2026-05-04-databricks-sql-scripting-coverage-requirements.md  2026-05-10-lineage-trace-plan-evaluation.md
docs/ideation/: 2026-04-18-open-ideation.md  2026-04-19-open-ideation.md  2026-04-22-access-global-view-ideation.md
docs/plans/: 2026-04-24-001-feat-transform-tab-plan.md  2026-04-25-001-feat-codebase-ask-feature-plan.md  2026-04-28-002-feat-passthrough-sql-context-plan.md  2026-05-10-007-feat-lineage-trace-plan.md  (+3 more)
frontend/: package-lock.json  package.json
sample_data/: finance_mart.sql  orders_agg.sql  transform_orders.py
(+61 files in other folders)
